avoid overlapping

--- a/design/preview/diagramPreview.css
+++ b/design/preview/diagramPreview.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: system-ui;
   margin: 0;
   padding: 0;
   display: flex;
@@ -205,6 +205,7 @@ body {
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding-top: 60px;
 }
 
 #backToTop {
